--- a/textarea.html
+++ b/textarea.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!--
   <link rel="stylesheet" href="css/froala_editor.css">
   <link rel="stylesheet" href="css/froala_style.css">
   <link rel="stylesheet" href="css/plugins/code_view.css">
@@ -12,7 +13,8 @@
   <link rel="stylesheet" href="css/plugins/image.css">
   <link rel="stylesheet" href="css/plugins/table.css">
   <link rel="stylesheet" href="css/plugins/video.css">
- 
+ -->
+  <link rel="stylesheet" href="css/compressed.css">
 
   <style>
     body {
@@ -43,6 +45,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
+ <!--
   <script type="text/javascript" src="js/froala_editor.min.js"></script>
   <script type="text/javascript" src="js/plugins/align.min.js"></script>
   <script type="text/javascript" src="js/plugins/code_beautifier.min.js"></script>
@@ -58,7 +61,8 @@
   <script type="text/javascript" src="js/plugins/video.min.js"></script>
   <script type="text/javascript" src="js/plugins/url.min.js"></script>
   <script type="text/javascript" src="js/plugins/entities.min.js"></script>
-
+-->
+  <script type="text/javascript" src="js/compressed.js"></script>
   <script>
     (function () {
       const editorInstance = new FroalaEditor('#edit', {
